--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,8 +11,11 @@ html(lang="en")
       h1 Noom
     
     main
+      form#nick
+        input(type="text", placeholder="choose a nickname", required)
+        button Save
       ul
-      form
+      form#message
         input(type="text", placeholder="write a msg", required)
         button Send
 
