--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,6 +11,10 @@ html(lang="en")
       h1 Noom
     
     main
-      
+      div#welcome
+        form
+          input(placeholder="room name", required, type="text")
+          button Enter Room
+
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js")
