--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,13 +12,14 @@ html(lang="en")
     
     main
       div#welcome
-        form
+        form#enter
+          input(placeholder="nickname", required, type="text")
           input(placeholder="room name", required, type="text")
           button Enter Room
       div#room
         h3
         ul
-        form
+        form#msg
           input(placeholder="message", required, type="text")
           button Send
           
