--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,9 +13,11 @@ html(lang="en")
     main
       div#welcome
         form#enter
-          input(placeholder="nickname", required, type="text")
+          input(placeholder="nickname", type="text")
           input(placeholder="room name", required, type="text")
           button Enter Room
+        h4 Open Rooms:
+        ul
       div#room
         h3
         ul
